[gd_scene load_steps=20 format=2]

[ext_resource path="res://Sprites/ball.png" type="Texture" id=1]
[ext_resource path="res://Ball.gd" type="Script" id=2]
[ext_resource path="res://Player.gd" type="Script" id=3]
[ext_resource path="res://Enemy.gd" type="Script" id=4]
[ext_resource path="res://addons/Trail/trail_2d.gd" type="Script" id=5]
[ext_resource path="res://Main.gd" type="Script" id=6]
[ext_resource path="res://AreaDetection.gd" type="Script" id=7]
[ext_resource path="res://Fonts/Roboto-Black.ttf" type="DynamicFontData" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 20.0
height = 80.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 20.0
height = 80.0

[sub_resource type="PhysicsMaterial" id=3]
friction = 0.0
bounce = 1.1

[sub_resource type="CircleShape2D" id=4]
radius = 16.5

[sub_resource type="Curve" id=10]
_data = [ Vector2( 0, 0.0636363 ), 0.0, -0.191831, 0, 0, Vector2( 0.664835, 0.409091 ), 1.08727, 1.08727, 0, 0, Vector2( 0.967033, 0.918182 ), 2.25018, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 0, 0.417219, 1 )
colors = PoolColorArray( 0.0740204, 0.106377, 0.902344, 0, 0.134277, 0.213585, 0.859375, 1, 0.0794678, 0.843695, 0.96875, 1 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 380, 50 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 380, 50 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 610, 50 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 610, 50 )

[sub_resource type="DynamicFont" id=11]
size = 32
font_data = ExtResource( 8 )

[node name="RootNode" type="Node2D"]
script = ExtResource( 6 )

[node name="Enemy" type="KinematicBody2D" parent="."]
position = Vector2( 640, 50 )
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy"]
rotation = 1.5708
shape = SubResource( 1 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 640, 670 )
script = ExtResource( 3 )
moveSpeed = 10.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
rotation = 1.5708
shape = SubResource( 2 )

[node name="Ball" type="RigidBody2D" parent="."]
position = Vector2( 442.105, 268.144 )
mass = 0.23
physics_material_override = SubResource( 3 )
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 2 )
MIN_VEL = 450
MAX_VEL = 1200

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="Ball/CollisionShape2D"]
scale = Vector2( 0.042, 0.042 )
texture = ExtResource( 1 )

[node name="Trail2D" type="Line2D" parent="Ball"]
z_index = -1
width = 25.0
width_curve = SubResource( 10 )
gradient = SubResource( 9 )
script = ExtResource( 5 )
distance = 10.0

[node name="WorldBorder" type="StaticBody2D" parent="."]

[node name="LeftWall" type="CollisionShape2D" parent="WorldBorder"]
position = Vector2( 1320, 360 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="RightWall" type="CollisionShape2D" parent="WorldBorder"]
position = Vector2( -40, 360 )
rotation = -1.5708
shape = SubResource( 8 )

[node name="EnemyArea" type="Area2D" parent="WorldBorder"]
position = Vector2( 640, -40 )
script = ExtResource( 7 )

[node name="EnemyAreaColl" type="CollisionShape2D" parent="WorldBorder/EnemyArea"]
shape = SubResource( 5 )

[node name="PlayerArea" type="Area2D" parent="WorldBorder"]
position = Vector2( 640, 760 )
script = ExtResource( 7 )

[node name="PlayerAreaColl" type="CollisionShape2D" parent="WorldBorder/PlayerArea"]
rotation = -3.14159
shape = SubResource( 7 )

[node name="Label" type="Label" parent="."]
visible = false
margin_right = 1280.0
margin_bottom = 720.0
custom_fonts/font = SubResource( 11 )
text = "SCORE:
YOU 0
ENEMY 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabel" type="Label" parent="."]
visible = false
margin_right = 1280.0
margin_bottom = 720.0
custom_fonts/font = SubResource( 11 )
text = "3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="WorldBorder/EnemyArea" to="WorldBorder/EnemyArea" method="_on_ScoreArea_body_entered"]
[connection signal="body_entered" from="WorldBorder/PlayerArea" to="WorldBorder/PlayerArea" method="_on_ScoreArea_body_entered"]
